Sube ultimo archivo faltante...

--- a/index.html
+++ b/index.html
@@ -42,9 +42,15 @@
                     </p>  
                 </div>                 
                 <div class="Introduccion_informacion">
-                    <a class="Introduccion_informacion_link" href="https://github.com/karus96">GitHub</a>
-                    <a class="Introduccion_informacion_link" href="https://www.linkedin.com/in/ricardo-apuy-a1b07b18a/">Linkedin</a>
-                    <a class="Introduccion_informacion_link" href="docs/Curriculum-Ricardo Apuy.pdf">Curriculum</a>
+                    <a class="Introduccion_informacion_link" href="https://github.com/karus96">GitHub 
+                        <img class="Introduccion_informacion_img" src="img/flecha.png" alt=""></a>
+                   
+                    <a class="Introduccion_informacion_link" href="https://www.linkedin.com/in/ricardo-apuy-a1b07b18a/">Linkedin
+                        <img class="Introduccion_informacion_img" src="img/flecha.png" alt="">
+                    </a>                    
+                    <a class="Introduccion_informacion_link" href="docs/Curriculum Ricardo Apuy.pdf">Curriculum
+                        <img class="Introduccion_informacion_img" src="img/flecha.png" alt="">
+                    </a>                    
                 </div>   
                 <div class="Introduccion_imagen"></div>
             </div>            
@@ -64,7 +70,7 @@
                     gracias a la experiencias dirigiendo el juego de mesa de Dungeons and dragons donde pude poner a prueba dichas historias y
                     gracias al interés que proporcionaba, me encamine al estudio de desarrollo de videojuegos. 
                 </p>                
-                <img class="SobreMi_img" src="img/firma ejemplo.png" alt="" >
+                
             </div>
             <div id="Skills" class="Skills">
                 <H1 class="Skills_titulo">Skills</H1>
@@ -234,6 +240,62 @@
                 <h2 class="Experiencia_titulo">Experiencia profesional</h2>
                 <div class="Experiencia_cards">
                     <div class="Experiencia_card">
+                        <iframe class="Experiencia_img Izquierda video"  src="https://www.youtube.com/embed/R_90jXH0ICE" title="YouTube vclasseo player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="Experiencia_txt Derecha">
+                            <p class="Experiencia_text_titulo">Tartaros</p>
+                            <p class="Experiencia_text_origen">Juego desarrollado en Unity usando C# como proyecto final de la Universidad</p>
+                            <a class="Experiencia_text_btnRepo"href="https://bitbucket.org/apuy1-admin/tartaros/src/master/">Repositorio</a>                        
+                        </div>                    
+                    </div>
+                    <div class="Experiencia_card">
+                        <iframe class="Experiencia_img Derecha video" src="https://www.youtube.com/embed/UMEh2dn-Zno" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="Experiencia_txt Izquierda">
+                            <p class="Experiencia_text_titulo">Mata Zombis</p>
+                            <p class="Experiencia_text_origen">Juego desarrollado en Unity usando C# como examen de la U</p>
+                            <a class="Experiencia_text_btnRepo"href="https://github.com/karus96/JuegoZombies">Repositorio</a>                              
+                        </div>
+                    </div>
+                    <div class="Experiencia_card">
+                        <iframe class="Experiencia_img Izquierda video"  src="https://www.youtube.com/embed/W2zTLiOAhqg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="Experiencia_txt Derecha">
+                            <p class="Experiencia_text_titulo">Batalla espacial</p>
+                            <p class="Experiencia_text_origen">Juego desarrollado en Unity usando C# como proyecto de la U</p>
+                            <a class="Experiencia_text_btnRepo"href="https://github.com/karus96/proyecto_videojuegos"">Repositorio</a>                              
+                        </div>
+                    </div>
+                    <div class="Experiencia_card">
+                        <img class="Experiencia_img Derecha" src="img/pocman.png" alt="">
+                        <div class="Experiencia_txt Izquierda">
+                            <p class="Experiencia_text_titulo">Pocman</p>
+                            <p class="Experiencia_text_origen">Juego desarrollado en Unity usando C# como practica de Udemy</p>
+                            <a class="Experiencia_text_btnRepo"href="https://github.com/karus96/Pocman">Repositorio</a>      
+                            <a class="Experiencia_text_btnDemo"href="Pocman/index.html" >Demo</a>                      
+                        </div>
+                    </div>
+                    <div class="Experiencia_card">
+                        <iframe  class="Experiencia_img Izquierda video" src="https://www.youtube.com/embed/H3XO-OX7YVQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="Experiencia_txt Derecha">
+                            <p class="Experiencia_text_titulo">Tetron</p>
+                            <p class="Experiencia_text_origen">Juego desarrollado en Unity usando C# como practica de Udemy</p>
+                            <a class="Experiencia_text_btnRepo"href="https://github.com/karus96/Tetron">Repositorio</a>                            
+                        </div>
+                    </div>                 
+                    <div class="Experiencia_card">
+                        <iframe class="Experiencia_img Derecha video" src="https://www.youtube.com/embed/x3V4nOWJCEc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="Experiencia_txt Izquierda">
+                            <p class="Experiencia_text_titulo">Escape de Aliens</p>
+                            <p class="Experiencia_text_origen">Juego desarrollado en Unity usando C# como practica de Udemy</p>
+                            <a class="Experiencia_text_btnRepo"href="https://github.com/karus96/EscapeDeAliens">Repositorio</a>                            
+                        </div>
+                    </div>
+                    <div class="Experiencia_card">
+                        <iframe class="Experiencia_img Izquierda video" src="https://www.youtube.com/embed/LaofIVGdRmw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="Experiencia_txt Derecha">
+                            <p class="Experiencia_text_titulo">Buscaminas</p>
+                            <p class="Experiencia_text_origen">Juego desarrollado en Unity usando C# como practica de Udemy</p>
+                        </div>
+                    </div>                    
+                    <div class="Experiencia_card">
                         <img class="Experiencia_img Derecha" src="img/encriptador.png" alt="">
                         <div class="Experiencia_txt Izquierda">
                             <p class="Experiencia_text_titulo">Encriptador de Texto creado en HTML y JavaScript</p>
@@ -250,59 +312,7 @@
                             <a class="Experiencia_text_btnRepo"href="https://github.com/karus96/JuegoDelAhorcado">Repositorio</a>
                             <a class="Experiencia_text_btnDemo"href="https://karus96.github.io/JuegoDelAhorcado/">Demo</a>
                         </div>
-                    </div>
-                    <div class="Experiencia_card">
-                        <img class="Experiencia_img Derecha" src="" alt="">
-                        <div class="Experiencia_txt Izquierda">
-                            <p class="Experiencia_text_titulo">Pocman</p>
-                            <p class="Experiencia_text_origen">Juego desarrollado en Unity usando C# como practica de Udemy</p>
-                            <a class="Experiencia_text_btnRepo"href="https://github.com/karus96/Pocman">Repositorio</a>                            
-                        </div>
-                    </div>
-                    <div class="Experiencia_card">
-                        <img class="Experiencia_img Izquierda" src="" alt="">
-                        <div class="Experiencia_txt Derecha">
-                            <p class="Experiencia_text_titulo">Tetron</p>
-                            <p class="Experiencia_text_origen">Juego desarrollado en Unity usando C# como practica de Udemy</p>
-                            <a class="Experiencia_text_btnRepo"href="">Repositorio</a>
-                            <a class="Experiencia_text_btnDemo"href="">Demo</a>
-                        </div>
-                    </div>
-                    <div class="Experiencia_card">
-                        <img class="Experiencia_img Derecha" src="" alt="">
-                        <div class="Experiencia_txt Izquierda">
-                            <p class="Experiencia_text_titulo">Buscaminas</p>
-                            <p class="Experiencia_text_origen">Juego desarrollado en Unity usando C# como practica de Udemy</p>
-                            <a class="Experiencia_text_btnRepo"href="">Repositorio</a>
-                            <a class="Experiencia_text_btnDemo"href="">Demo</a>
-                        </div>
-                    </div>
-                    <div class="Experiencia_card">
-                        <img class="Experiencia_img Izquierda" src="" alt="">
-                        <div class="Experiencia_txt Derecha">
-                            <p class="Experiencia_text_titulo">Escape del laberinto</p>
-                            <p class="Experiencia_text_origen">Juego desarrollado en el RPG Maker MV</p>
-                            <a class="Experiencia_text_btnRepo"href="">Repositorio</a>
-                            <a class="Experiencia_text_btnDemo"href="">Demo</a>
-                        </div>
-                    </div>
-                    <div class="Experiencia_card">
-                        <img class="Experiencia_img Derecha" src="" alt="">
-                        <div class="Experiencia_txt Izquierda">
-                            <p class="Experiencia_text_titulo">Casa de la muerto</p>
-                            <p class="Experiencia_text_origen">Juego desarrollado en el RPG Maker MV con base en La casa de la Muerte, campaña del juego D&D</p>
-                            <a class="Experiencia_text_btnRepo"href="">Repositorio</a>
-                              <a class="Experiencia_text_btnDemo"href="">Demo</a>
-                        </div>
-                    </div>
-                    <div class="Experiencia_card">
-                        <iframe class="Experiencia_img Izquierda video"  src="https://www.youtube.com/embed/R_90jXH0ICE" title="YouTube vclasseo player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <div class="Experiencia_txt Derecha">
-                            <p class="Experiencia_text_titulo">Tartaros</p>
-                            <p class="Experiencia_text_origen">Juego desarrollado en Unity usando C# como proyecto final de la Universidad</p>
-                            <a class="Experiencia_text_btnRepo"href="https://bitbucket.org/apuy1-admin/tartaros/src/master/">Repositorio</a>                        
-                        </div>                    
-                    </div>
+                    </div>    
                     <div class="Experiencia_card">
                         <img class="Experiencia_img Derecha" src="img/ctrl-datos.png" alt="">
                         <div class="Experiencia_txt Izquierda">
