Actualizacion del curriculum

--- a/index.html
+++ b/index.html
@@ -34,12 +34,10 @@
         <main>
             <div class="Introduccion">
                 <div class="Introduccion_Titulo">
-                    <h1>Hola, mi nombre es Ricardo Apuy y me gusta desarrollar juegos</h1>    
+                    <h1>Hola, mi nombre es Ricardo Apuy y me gusta desarrollar video juegos</h1>    
                 </div>   
                 <div  class="Introduccion_texto">
-                    <p>Soy costarricense apasionado en la programación y el desarrollo de videojuegos.
-                         Actualmente estoy participando en el proyecto Oracle ONE en Alura Latam.
-                    </p>  
+                    <p>Soy costarricense apasionado en la programación y el desarrollo de videojuegos.</p>  
                 </div>                 
                 <div class="Introduccion_informacion">
                     <a class="Introduccion_informacion_link" href="https://github.com/karus96">GitHub 
@@ -57,14 +55,16 @@
             <div id="SobreMi" class="SobreMi">
                 <h1 class="SobreMi_titulo">Sobre mi</h1>
                 <p class="SobreMi_texto"> 
-                    Me he formado en el INA (Instituto Nacional de Aprendizaje) de ofimática, Access y Project. Gracias a las promociones de los 
-                    cursos de Udemy he tenido la oportunidad de formarme en JavaScript e Unity. 
-                    <br><br>
-                    Actualmente estudio diseño 3D y profundizo el uso de Unity  por medio de la plataforma de Udemy y soy estudiante a 
-                    punto de graduarme de la Universidad Fidélitas como ingeniero en sistemas.                     
-                    Llevo varios años estudiando informática, gracias al constante apoyo de mis padres y me he centrado especialmente en el 
-                    lenguaje de C# y el uso de Unity para el desarrollo de juegos, ademas de tener conocimientos en el uso de bases de datos 
-                    (SQL y NoSQL) y desarrollo web.
+                    Soy egresado de la Universidad Fidélitas como ingeniero en sofware, me he formado en el INA (Instituto Nacional de Aprendizaje) de ofimática, 
+                    Access y Project. Gracias a las promociones de los cursos de Udemy he tenido la oportunidad de formarme en JavaScript e Unity. 
+                    <br><br>                   
+                    Gracias al apoyo constante y valioso de mis padres, he logrado alcanzar la titulación de ingeniero en software. 
+                    Mi enfoque se ha centrado de manera especial en el dominio del lenguaje de programación C# y en la utilización del motor Unity
+                    para la creación y desarrollo tanto de videojuegos como de plugins. 
+                    Además, cuento con un conocimientos en el ámbito de las bases de datos, abarcando tanto el sistemas SQL como de bases de datos NoSQL. 
+                    Asimismo, mi experiencia abarca el desarrollo web, completando así un conjunto integral de habilidades en el vasto campo del desarrollo 
+                    de software. Todo esto ha sido posible gracias al apoyo continuo y alentador de mis padres, quienes han sido fundamentales en mi trayectoria 
+                    educativa y profesional.
                     <br><br>
                     Como apasionado de la lectura de fantasía y ciencia ficción me ha llevo a desarrollar historias propias de dichos temas y 
                     gracias a la experiencias dirigiendo el juego de mesa de Dungeons and dragons donde pude poner a prueba dichas historias y
@@ -214,8 +214,7 @@
                         <div class="Formacion_img">
                             <img class="Formacion_img_img" src="img/u_fidelitas.png" alt="">
                         </div>                       
-                        <p class="Formacion_texto">Universidad Fidélitas
-                            <br>En curso
+                        <p class="Formacion_texto"> Universidad Fidélitas Bachillerato en ingenieria de sofware                         
                         </p>
                     </div>
                     <div class="Formacion_card">
@@ -230,8 +229,7 @@
                         <div class="Formacion_img">
                             <img class="Formacion_img_img" src="img/Alura.png" alt="">
                         </div>                        
-                        <p class="Formacion_texto">Alura
-                            <br>En curso
+                        <p class="Formacion_texto">Alura                            
                         </p>
                     </div>
                 </div>                
