--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <link rel="stylesheet" href="CSS/contacto.css">  
         <link rel="stylesheet" href="CSS/footer.css">  
     </head>
-    <body>
-        <a href="Aliens/Godot Test.html>Texto del enlace</a>
+    <body>        
         <header class="Header">
             <div class="Container">
                 <h3>
@@ -73,6 +72,7 @@
                 </p>                
                 
             </div>
+            <a href="Aliens/Godot Test.html"a> Juego de prueba en godot </a>
             <div id="Skills" class="Skills">
                 <H1 class="Skills_titulo">Skills</H1>
                 <div class="Skills_cards">
